name:                advent2017
version:             0.1.0.0
synopsis:            Advent of Code 2017 solutions
-- description:         
homepage:            https://github.com/glguy/advent2017
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
copyright:           2017 Eric Mertens
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Advent
  build-depends:       base >=4.10 && <4.11
  hs-source-dirs:      common
  default-language:    Haskell2010

executable Day01
  main-is:             Day01.hs
  build-depends:       advent2017, base >=4.10 && <4.11
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day02
  main-is:             Day02.hs
  build-depends:       advent2017, base >=4.10 && <4.11
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day03
  main-is:             Day03.hs
  build-depends:       advent2017, containers >=0.5 && <=0.6, base >=4.10 && <4.11
  hs-source-dirs:      execs
  default-language:    Haskell2010
