name:                advent2017
version:             0.1.0.0
synopsis:            Advent of Code 2017 solutions
-- description:         
homepage:            https://github.com/glguy/advent2017
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
copyright:           2017 Eric Mertens
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Advent,
                       Advent.Fix
  build-depends:       base >=4.10 && <4.11,
                       containers >=0.5 && <0.6,
                       megaparsec >=6.2 && <6.3
  hs-source-dirs:      common
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  main-is:             doctest.hs
  build-depends:       base, doctest, lens, split
  default-language:    Haskell2010

executable Day01
  main-is:             Day01.hs
  build-depends:       advent2017, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day02
  main-is:             Day02.hs
  build-depends:       advent2017, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day03
  main-is:             Day03.hs
  build-depends:       advent2017, containers >=0.5 && <=0.6, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day04
  main-is:             Day04.hs
  build-depends:       advent2017, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day05
  main-is:             Day05.hs
  build-depends:       advent2017, base, vector >=0.12 && <0.13
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day06
  main-is:             Day06.hs
  build-depends:       advent2017, base, vector, lens, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day07
  main-is:             Day07.hs
  build-depends:       advent2017, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day08
  main-is:             Day08.hs
  build-depends:       advent2017, base, containers, lens
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day09
  main-is:             Day09.hs
  build-depends:       advent2017, base, megaparsec, linear
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day10
  main-is:             Day10.hs
  build-depends:       advent2017, base, vector, split
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day11
  main-is:             Day11.hs
  build-depends:       advent2017, base, split
  hs-source-dirs:      execs
  default-language:    Haskell2010
