name:                advent2017
version:             0.1.0.0
synopsis:            Advent of Code 2017 solutions
-- description:         
homepage:            https://github.com/glguy/advent2017
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
copyright:           2017 Eric Mertens
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Advent,
                       Advent.Coord,
                       Advent.Fix,
                       Advent.Permutation
  build-depends:       base >=4.10 && <4.11,
                       containers >=0.5 && <0.6,
                       megaparsec >=6.3 && <6.4,
                       vector >=0.12 && <0.13
  hs-source-dirs:      common
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  main-is:             doctest.hs
  build-depends:       base, doctest, lens, split, linear
  default-language:    Haskell2010

executable Day01
  main-is:             Day01.hs
  build-depends:       advent2017, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day02
  main-is:             Day02.hs
  build-depends:       advent2017, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day03
  main-is:             Day03.hs
  build-depends:       advent2017, containers, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day04
  main-is:             Day04.hs
  build-depends:       advent2017, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day05
  main-is:             Day05.hs
  build-depends:       advent2017, base, vector
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day06
  main-is:             Day06.hs
  build-depends:       advent2017, base, vector, lens, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day07
  main-is:             Day07.hs
  build-depends:       advent2017, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day08
  main-is:             Day08.hs
  build-depends:       advent2017, base, containers, lens
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day09
  main-is:             Day09.hs
  build-depends:       advent2017, base, megaparsec, linear
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day10
  main-is:             Day10.hs
  build-depends:       advent2017, base, vector, split
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day11
  main-is:             Day11.hs
  build-depends:       advent2017, base, split
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day12
  main-is:             Day12.hs
  build-depends:       advent2017, base, fgl, megaparsec
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day13
  main-is:             Day13.hs
  build-depends:       advent2017, base, megaparsec
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day14
  main-is:             Day14.hs
  build-depends:       advent2017, base, vector, fgl, containers, split
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day15
  main-is:             Day15.hs
  build-depends:       advent2017, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day16
  main-is:             Day16.hs
  build-depends:       advent2017, base, megaparsec
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day17
  main-is:             Day17.hs
  ghc-options:         -O2 -fllvm
  build-depends:       advent2017, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day18
  main-is:             Day18.hs
  build-depends:       advent2017, base, containers, vector, lens
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day19
  main-is:             Day19.hs
  build-depends:       advent2017, base, vector
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day20
  main-is:             Day20.hs
  build-depends:       advent2017, base, containers, megaparsec, linear
  hs-source-dirs:      execs
  default-language:    Haskell2010
